#Feature Fixed overlapping css in edit user and password

--- a/portfolio/src/main/resources/static/styles/user/changePassword.css
+++ b/portfolio/src/main/resources/static/styles/user/changePassword.css
@@ -135,7 +135,6 @@ input.button {
 button {
     padding: 3px 10px 3px 10px;
     margin-right: 5px;
-    margin-left: 20px;
 }
 
 a.button {
