--- a/portfolio/src/main/resources/static/styles/user/editUser.css
+++ b/portfolio/src/main/resources/static/styles/user/editUser.css
@@ -28,7 +28,6 @@ input.button {
 button {
     padding: 3px 10px 3px 10px;
     margin-right: 5px;
-    margin-left: 20px;
 }
 
 
